fix Code smell